--- a/index.html
+++ b/index.html
@@ -5,16 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="index.css" />
-    <style>
-      @import url("https://fonts.googleapis.com/css2?family=Fuggles&display=swap");
-    </style>
-    <title>Html & Css Exercise</title>
+    <title>HTML & CSS Exercise</title>
   </head>
   <body>
     <div class="content">
       <img class="tayrona" src="/images/Landscape.webp" alt="" />
       <div class="profile">
-        <img class="avatar" src="/images/Avatar3.webp" alt="" />
+        <img class="avatar" src="/images/Avatar.webp" alt="" />
         <h1>Diego Plata</h1>
         <h3>Barranquilla, Atl</h3>
       </div>
